# obs-adjustment-layer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report---不具合報告.md  feature-request---機能要望.md
data/locale/: en-US.ini  ja-JP.ini  ko-KR.ini  zh-CN.ini  zh-TW.ini
src/: adjustment-layer.c
